--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,13 +12,13 @@ on:
 jobs:run time (0:00)
   build:
 
-    runs-on: apt-x-turbnat
+    runs-on: apt-x-turbine
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 1/37.8
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file pimp.xxl
