--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Java A.I. with Maven
 
 on:
   push:
@@ -12,7 +12,7 @@ on:
 jobs:run time (0:00)
   build:
 
-    runs-on: apt-x-turbnat
+    runs-on: apt-x-turbine
 
     steps:
     - uses: actions/checkout@v2
